tests/baselines/reference/PropertyAccessibility2.errors.txt
==== tests/cases/compiler/propertyAccessibility2.ts (1 errors) ====
    class C {
      private static x = 1;
    }
    var c = C.x;
              ~
!!! propertyAccessibility2.ts(4,11): error TS2107: 'C.x' is inaccessible.
    